@@ -1,6 +1,8 @@
 22 January 2018: Wouter
 	- Fix space calculation for tcp req buffer size.
 	- Doc for stream-wait-size and unit test.
+	- unbound-control stats has mem.streamwait that counts TCP and TLS
+	  waiting result buffers.
 
 21 January 2018: Wouter
 	- Fix tcp idle timeout test, for difference in the tcp reply code.
